src/objects/Stripe_Data__c.object
<CustomObject>
    <description>Receives and Retrieves Data from Stripe WebHook</description>
    <fields>
        <fullName>Card_Address_City__c</fullName>
        <label>Card Address City</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Card_Address_Line_1__c</fullName>
        <label>Card Address Line 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Card_Address_Line_2__c</fullName>
        <label>Card Address Line 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Card_Address_State__c</fullName>
        <label>Card Address State</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Card_Address_Zip__c</fullName>
        <label>Card Address Zip</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Card_Id__c</fullName>
        <label>Card Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Card_Last_Four_Digits__c</fullName>
        <label>Card Last Four Digits</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Card_MetaData__c</fullName>
        <label>Card MetaData</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Charge_Amount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Charge Amount</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Charge_Captured__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Charge Captured?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Charge_Created_Date__c</fullName>
        <description>Created Date on Charge Record</description>
        <inlineHelpText>Created Date on Charge Record</inlineHelpText>
        <label>Charge Created Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Charge_Id__c</fullName>
        <label>Charge Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Charge_Invoice_Id__c</fullName>
        <description>Invoice Id from Charge - usually indicates it is a recurring charge</description>
        <inlineHelpText>Invoice Id from Charge - usually indicates it is a recurring charge</inlineHelpText>
        <label>Charge Invoice Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Charge_MetaData__c</fullName>
        <description>Metadata from Charge Object</description>
        <inlineHelpText>Metadata from Charge Object</inlineHelpText>
        <label>Charge MetaData</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Customer_Email__c</fullName>
        <label>Customer Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Customer_Id__c</fullName>
        <description>Id of Customer for Subscriptions etc</description>
        <inlineHelpText>Id of Customer for Subscriptions etc</inlineHelpText>
        <label>Customer Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <description>Stripe does not have a first name field, so we&apos;ll try and populate this via workflow</description>
        <inlineHelpText>Stripe does not have a first name field, so we&apos;ll try and populate this via workflow</inlineHelpText>
        <label>First Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>In_Honor_Of__c</fullName>
        <description>Usually passed in via Stripe&apos;s Metadata</description>
        <inlineHelpText>Usually passed in via Stripe&apos;s Metadata</inlineHelpText>
        <label>In Honor Of</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invoice_MetaData__c</fullName>
        <label>Invoice MetaData</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>JSON_Response__c</fullName>
        <label>JSON Response</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <description>Stripe does not have a last name field, so we&apos;ll try and populate this via workflow based on Name field</description>
        <inlineHelpText>Stripe does not have a last name field, so we&apos;ll try and populate this via workflow based on Name field</inlineHelpText>
        <label>Last Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_on_Card__c</fullName>
        <description>Name field on Card Object</description>
        <inlineHelpText>Name field on Card Object</inlineHelpText>
        <label>Name on Card</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Plan_Id__c</fullName>
        <label>Plan Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Processing_Status__c</fullName>
        <label>Processing Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Verify Data from Stripe</fullName>
                </value>
                <value>
                    <fullName>Verified Successfully</fullName>
                </value>
                <value>
                    <fullName>Error with Verification</fullName>
                </value>
                <value>
                    <fullName>Imported Successfully</fullName>
                </value>
                <value>
                    <fullName>Error with Import</fullName>
                </value>
                <value>
                    <fullName>Processed Successfully</fullName>
                </value>
                <value>
                    <fullName>Error with Processing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Receipt_Email__c</fullName>
        <label>Receipt Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Stripe_Event_Type__c</fullName>
        <label>Stripe Event Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stripe_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>Stripe Id</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Stripe_Live_Mode__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Was this transaction a live Stripe Transaction?</description>
        <inlineHelpText>Was this transaction a live Stripe Transaction?</inlineHelpText>
        <label>Stripe Live Mode?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Stripe_Object__c</fullName>
        <label>Stripe Object</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Default</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Subscription_Amount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Subscription Amount</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Subscription_Id__c</fullName>
        <label>Subscription Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subscription__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Set by workflow, based on whether Invoice Id Provided</description>
        <inlineHelpText>Set by workflow, based on whether Invoice Id Provided</inlineHelpText>
        <label>Subscription?</label>
        <type>Checkbox</type>
    </fields>
    <label>Stripe Data</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Stripe_Event_Type__c</columns>
        <columns>Stripe_Id__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>charge_succeeded</fullName>
        <columns>NAME</columns>
        <columns>Card_Address_City__c</columns>
        <columns>Card_Address_Line_1__c</columns>
        <columns>Card_Address_Line_2__c</columns>
        <columns>Card_Address_State__c</columns>
        <columns>Card_Address_Zip__c</columns>
        <columns>Card_Id__c</columns>
        <columns>Card_Last_Four_Digits__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Stripe_Event_Type__c</field>
            <operation>equals</operation>
            <value>charge.succeeded</value>
        </filters>
        <label>charge.succeeded</label>
    </listViews>
    <nameField>
        <displayFormat>STRIPE-{000000}</displayFormat>
        <label>Stripe Data Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Stripe Data</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>